refactor(navbar): update HTML structure and CSS for improved layout

--- a/index.html
+++ b/index.html
@@ -50,9 +50,16 @@
       </div>
     </div>
   </div>
-  <div class="main-content">
-    <img src="img/4967344_hp_glp_masthead_dt_1920x720_id.jpg" alt="">
-    <img src="img/4883466_masthead_dt_2880x1280.jpg" alt="">
+  <div class="sale-banner">
+    <div class="sale-content">
+      <img class="brand-banner" src="img/4967344_hp_glp_masthead_dt_1920x720_id.jpg" alt="brand-banner">
+      <div class="sale-info">
+        <span class="event-sale">11.11 SALE</span>
+        <button class="sale-button">BELI SEKARANG</button>
+        <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        <span class="terms">S&K DAN PENGECUALIAN BERLAKU</span>
+      </div>
+    </div>
   </div>
 </body>
 </html>
