refactor(navbar): update HTML structure and CSS for improved layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins&display=swap" rel="stylesheet">
+  <!-- Fonts Goofle Poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Favicon Website -->
@@ -55,8 +59,10 @@
       <img class="brand-banner" src="img/4967344_hp_glp_masthead_dt_1920x720_id.jpg" alt="brand-banner">
       <div class="sale-info">
         <span class="event-sale">11.11 SALE</span>
-        <button class="sale-button">BELI SEKARANG</button>
+        <button class="sale-button">
+          BELI SEKARANG
         <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        </button>
         <span class="terms">S&K DAN PENGECUALIAN BERLAKU</span>
       </div>
     </div>
