refactor(navbar): update HTML structure and CSS for improved layout

--- a/index.html
+++ b/index.html
@@ -58,12 +58,38 @@
     <div class="sale-content">
       <img class="brand-banner" src="img/4967344_hp_glp_masthead_dt_1920x720_id.jpg" alt="brand-banner">
       <div class="sale-info">
-        <span class="event-sale">11.11 SALE</span>
+        <div class="event-sale">11.11 SALE</div>
         <button class="sale-button">
           BELI SEKARANG
         <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
         </button>
         <span class="terms">S&K DAN PENGECUALIAN BERLAKU</span>
+      </div>
+    </div>
+  </div>
+  <div class="sale-banner">
+    <div class="sale-content">
+      <img class="brand-banner" src="img/4883466_masthead_dt_2880x1280.jpg" alt="brand-banner">
+      <div class="sale-info">
+        <div class="event-sale">EMPOWRED IN MOTION</div>
+        <div class="banner-description">Tunjukkan kekuatanmu dengan koleksi training adidas yang serbaguna</div>
+        <button class="sale-button">
+          BELANJA SEKARANG
+        <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="sale-banner">
+    <div class="sale-content">
+      <img class="brand-banner" src="img/hp_glp_masthead_desktop_1920x720px_6.jpg" alt="brand-banner">
+      <div class="sale-info">
+        <div class="event-sale">TEMUKAN KOLEKSI JAVA!</div>
+        <div class="banner-description">Lengkapi gayamu dengan Java Shoes dan Java Tee yang chic, juga Java Bag.</div>
+        <button class="sale-button">
+          DAPATKAN SEKARANG!
+        <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        </button>
       </div>
     </div>
   </div>
