refactor(navbar): update HTML structure and CSS for improved layout

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
     </div>
   </div>
+  <!-- Sale Banner and Sale Content -->
   <div class="sale-banner">
     <div class="sale-content">
       <img class="brand-banner" src="img/4967344_hp_glp_masthead_dt_1920x720_id.jpg" alt="brand-banner">
@@ -63,7 +64,7 @@
           BELI SEKARANG
         <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
         </button>
-        <span class="terms">S&K DAN PENGECUALIAN BERLAKU</span>
+        <div class="terms">S&K DAN PENGECUALIAN BERLAKU</div>
       </div>
     </div>
   </div>
