refactor(teaser-cards): align SHOP NOW buttons across cards by adjusting CSS layout

--- a/index.html
+++ b/index.html
@@ -101,26 +101,41 @@
         <img class="teaser-media" src="img/Training-FW24-Dropset3-global-Launch-HP-Teaser-Card-d.jpg" alt="teaser-media">
         <div class="teaser-header">Dropset 3</div>
         <div class="teaser-description">Add power with controlled stability</div>
+        <div class="teaser-button">
+          <a class="teaser-link" href="#">SHOP NOW</a>
+        </div>
       </div>
       <div class="teaser-card">
         <img class="teaser-media" src="img/Lo_Pro_Teaser_Carousel_1050x1400.png" alt="teaser-media">
         <div class="teaser-header">Taekwondo-inspired shoes</div>
         <div class="teaser-description">A nod to the early '00s with a minimal, slip-on design.</div>
+        <div class="teaser-button">
+          <a class="teaser-link" href="#">SHOP NOW</a>
+        </div>
       </div>
       <div class="teaser-card">
         <img class="teaser-media" src="img/running-fw24-supernova-launch-ct-rise-d.jpg" alt="teaser-media">
         <div class="teaser-header">Supernova Rise</div>
         <div class="teaser-description">For your daily comfort runs. Now 13% softer than previous adidas Supernova models.</div>
+        <div class="teaser-button">
+          <a class="teaser-link" href="#">SHOP NOW</a>
+        </div>
       </div>
       <div class="teaser-card">
         <img class="teaser-media" src="img/fw24-basketball-classics-launch-hp-tc-d-frame.jpg" alt="teaser-media">
         <div class="teaser-header">Basketball Classics</div>
         <div class="teaser-description">From the hardwood to the city streets, Rivalry and Forum bring the rich history of sport to modern-day culture.</div>
+        <div class="teaser-button">
+          <a class="teaser-link" href="#">SHOP NOW</a>
+        </div>
       </div>
       <div class="teaser-card">
         <img class="teaser-media" src="img/TC-ZNE_BABYMONSTER.png" alt="teaser-media">
         <div class="teaser-header">ADIDAS Z.N.E.</div>
         <div class="teaser-description">The Lines That Connect Us.</div>
+        <div class="teaser-button">
+          <a class="teaser-link" href="#">SHOP NOW</a>
+        </div>
       </div>
     </div>
   </div>
