style(sale-button): enhance user experience with hover animation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="event-sale">11.11 SALE</div>
         <button class="sale-button">
           BELI SEKARANG
-        <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        <img class="right-black-arrow" src="assets/arrow.png" alt="arrow-right">
         </button>
         <div class="terms">S&K DAN PENGECUALIAN BERLAKU</div>
       </div>
@@ -76,7 +76,7 @@
         <div class="banner-description">Tunjukkan kekuatanmu dengan koleksi training adidas yang serbaguna</div>
         <button class="sale-button">
           BELANJA SEKARANG
-        <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        <img class="right-black-arrow" src="assets/arrow.png" alt="arrow-right">
         </button>
       </div>
     </div>
@@ -89,11 +89,12 @@
         <div class="banner-description">Lengkapi gayamu dengan Java Shoes dan Java Tee yang chic, juga Java Bag.</div>
         <button class="sale-button">
           DAPATKAN SEKARANG!
-        <img class="arrow-right" src="assets/arrow.png" alt="arrow-right">
+        <img class="right-black-arrow" src="assets/arrow.png" alt="arrow-right">
         </button>
       </div>
     </div>
   </div>
+  <!-- Teaser Content -->
   <div class="teaser-content-container">
     <h3 class="teaser-title">WHAT'S HOT</h3>
     <div class="teaser-content">
