feat(category-section): add new category section with button component

--- a/index.html
+++ b/index.html
@@ -140,5 +140,28 @@
       </div>
     </div>
   </div>
+  <div class="category-section-container">
+    <div class="category-content">
+      <img class="category-media" src="img/nav-men-d_tcm207-819364_2.jpg" alt="category-media">
+      <div class="category-button">
+        <button class="button-section">PRIA</button>
+        <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow">
+      </div>
+    </div>
+    <div class="category-content">
+      <img class="category-media" src="img/nav-kids-d_tcm207-819367_2.jpg" alt="category-media">
+      <div class="category-button">
+        <button class="button-section">ANAK</button>
+        <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow">
+      </div>
+    </div>
+    <div class="category-content">
+      <img class="category-media" src="img/nav-women-d_tcm207-819363_2.jpg" alt="category-media">
+      <div class="category-button">
+        <button class="button-section">WANITA</button>
+        <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
