feat(button): replace arrow image with Bootstrap icon and add hover & active animations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Favicon Website -->
@@ -144,22 +147,28 @@
     <div class="category-content">
       <img class="category-media" src="img/nav-men-d_tcm207-819364_2.jpg" alt="category-media">
       <div class="category-button">
-        <button class="button-section">PRIA</button>
-        <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow">
+        <button class="button-section">PRIA
+          <i class="bi bi-arrow-right"></i>
+        </button>
+        <!-- <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow"> -->
       </div>
     </div>
     <div class="category-content">
       <img class="category-media" src="img/nav-kids-d_tcm207-819367_2.jpg" alt="category-media">
       <div class="category-button">
-        <button class="button-section">ANAK</button>
-        <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow">
+        <button class="button-section">ANAK
+          <i class="bi bi-arrow-right"></i>
+        </button>
+        <!-- <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow"> -->
       </div>
     </div>
     <div class="category-content">
       <img class="category-media" src="img/nav-women-d_tcm207-819363_2.jpg" alt="category-media">
       <div class="category-button">
-        <button class="button-section">WANITA</button>
-        <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow">
+        <button class="button-section">WANITA
+          <i class="bi bi-arrow-right"></i>
+        </button>
+        <!-- <img class="right-white-arrow" src="assets/icons8-arrow-50.png" alt="right-white-arrow"> -->
       </div>
     </div>
   </div>
