feat(product-section): add content & CSS styling

--- a/index.html
+++ b/index.html
@@ -172,5 +172,31 @@
       </div>
     </div>
   </div>
+  <div class="product-section-container">
+    <div class="product-content">
+      <img class="product-media" src="img/superstar_1.jpg" alt="product-media">
+      <div class="adidas-product">
+        <a class="product-name" href="#">SUPERSTAR</a>
+      </div>
+    </div>
+    <div class="product-content">
+      <img class="product-media" src="img/stansmith_1.jpg" alt="product-media">
+      <div class="adidas-product">
+        <a class="product-name" href="#">STAN SMITH</a>
+      </div>
+    </div>
+    <div class="product-content">
+      <img class="product-media" src="img/ub-hp-desktop.jpg" alt="product-media">
+      <div class="adidas-product">
+        <a class="product-name" href="#">ULTRABOOST</a>
+      </div>
+    </div>
+    <div class="product-content">
+      <img class="product-media" src="img/desktop_fourcolumn_nmd.jpg" alt="product-media">
+      <div class="adidas-product">
+        <a class="product-name" href="#">NMD</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
