feat(adidas-product-section): add content & CSS styling

--- a/index.html
+++ b/index.html
@@ -198,5 +198,50 @@
       </div>
     </div>
   </div>
+  <div class="adidas-product-section">
+    <h3 class="adidas-section-title">PRODUK TERBAIK ADIDAS</h3>
+    <div class="adidas-product-carousel">
+      <div class="adidas-product-card">
+        <div class="adidas-product-badge">BARU</div>
+        <img class="adidas-product-image" src="img/ig1811_2_footwear_photography_side20lateral20view_grey.jpg" alt="adidas-product-image">
+        <div class="adidas-product-info">
+          <span class="adidas-product-category">Pria Originals</span>
+          <span class="adidas-product-name">JAVA SHOES</span>
+          <span class="adidas-product-price">Rp. 1.800.000</span>
+        </div>
+        <button class="adidas-wishlist-button">&#x2661;</button>
+      </div>
+      <div class="adidas-product-card">
+        <div class="adidas-product-badge">BARU</div>
+        <img class="adidas-product-image" src="img/ig4645_2_footwear_photography_side_lateral_view_grey.jpeg" alt="adidas-product-image">
+        <div class="adidas-product-info">
+          <span class="adidas-product-category">Pria Originals</span>
+          <span class="adidas-product-name">SEPATU SL 72 RS</span>
+          <span class="adidas-product-price">Rp. 1.600.000</span>
+        </div>
+        <button class="adidas-wishlist-button">&#x2661;</button>
+      </div>
+      <div class="adidas-product-card">
+        <div class="adidas-product-badge">BARU</div>
+        <img class="adidas-product-image" src="img/if9528_2_footwear_photography_side20lateral20view_grey.jpg" alt="adidas-product-image">
+        <div class="adidas-product-info">
+          <span class="adidas-product-category">Pria Originals</span>
+          <span class="adidas-product-name">SEPATU HANDBALL SPEZIAL</span>
+          <span class="adidas-product-price">Rp. 1.700.000</span>
+        </div>
+        <button class="adidas-wishlist-button">&#x2661;</button>
+      </div>
+      <div class="adidas-product-card">
+        <div class="adidas-product-badge">BARU</div>
+        <img class="adidas-product-image" src="img/ih4771_2_footwear_photography_side20lateral20view_grey.jpg" alt="adidas-product-image">
+        <div class="adidas-product-info">
+          <span class="adidas-product-category">Pria Originals</span>
+          <span class="adidas-product-name">SEPATU GAZELLE INDOOR</span>
+          <span class="adidas-product-price">Rp. 2.300.000</span>
+        </div>
+        <button class="adidas-wishlist-button">&#x2661;</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
