feat(adidas-info-section-about): add content & CSS styling

--- a/index.html
+++ b/index.html
@@ -243,5 +243,23 @@
       </div>
     </div>
   </div>
+  <div class="adidas-info-section-about">
+    <div class="adidas-info-about">
+      <div class="adidas-info-about-title">
+        Dapatkan Koleksi Sepatu Olahraga, Sneaker & Perlengkapan Olahraga terbaru di adidas Indonesia
+      </div>
+      <div class="adidas-info-about-description">
+        Selamat datang di situs resmi adidas Indonesia di mana Anda dapat membeli perlengkapan dan aksesori olahraga berkualitas. Toko Online Resmi adidas Indonesia menyediakan produk terbaik mulai dari sepatu olahraga, dan sneaker, hingga aksesori olahraga lainnya untuk semua kebutuhan Anda. Tersedia berbagai macam sepatu yang cocok untuk setiap momen dan nyaman dipakai saat berolahraga. Di Toko Online Resmi adidas Indonesia, tersedia berbagai macam produk top seperti Sepatu Sepak Bola Ace & X, adidas Originals, Sepatu Training, Atasan untuk Running, Sport Bra Wanita, Aksesori Olahraga dan masih banyak lagi. Toko Online Resmi adidas terus memperbarui daftar produknya sehingga Anda dapat membeli koleksi sepatu, pakaian, aksesori olahraga terbaru kami. Temukan sepatu favorit Anda mulai dari sepatu untuk pria, wanita, dan anak-anak hanya di toko online resmi kami.
+      </div>
+    </div>
+    <div class="adidas-info-about">
+      <div class="adidas-info-about-title">
+        adidas Indonesia Menyediakan Semua Kebutuhan Olahraga Anda
+      </div>
+      <div class="adidas-info-about-description">
+        Mencari perlengkapan olahraga yang dapat meningkatkan performa Anda dan lebih nyaman saat digunakan berolahraga? Hanya ada satu tempat yang dapat menyediakan semua kebutuhan olahraga Anda mulai dari sepatu hingga aksesori, yaitu Toko Online Resmi adidas Indonesia. adidas Indonesia menyediakan perlengkapan olahraga mulai dari sepatu training, celana running, hingga aksesori olahraga untuk pria, wanita, dan anak-anak. Toko Online Resmi adidas Indonesia menawarkan banyak deal untuk Anda yang berbelanja secara online; mulai dari gratis ongkos kirim jika Anda berbelanja minimal Rp 900.000, easy return, fast response, dan masih banyak lagi. Beli segera sepatu untuk segala jenis olahraga hanya di adidas Indonesia.
+      </div>
+    </div>
+  </div>
 </body>
 </html>
