feat(footer-newsletter-section): add content & CSS styling

--- a/index.html
+++ b/index.html
@@ -261,5 +261,17 @@
       </div>
     </div>
   </div>
+  <div class="footer-newsletter-container">
+    <div class="footer-newsletter-wrapper">
+      <div class="footer-newsletter-subscribe">
+        <h4 class="footer-newsletter-info">Daftarkan Email Anda Untuk Mendapatkan Info <br> Dan Penawaran Spesial</h4>
+        <div class="footer-newsletter-button">
+          <button class="btn-sign-up">Sign Up for free
+            <i class="bi bi-arrow-right"></i>
+          </button>
+        </div>
+      </div>  
+    </div>
+  </div>
 </body>
 </html>
