feat(footer-list-container): add content and styling css

--- a/index.html
+++ b/index.html
@@ -273,5 +273,91 @@
       </div>  
     </div>
   </div>
+  <div class="footer-content-container">
+    <div class="footer-content-wrapper">
+      <div class="footer-list-container">
+        <ul>
+          <li>
+            <h5>Produk</h5>
+          </li>
+          <li>Sepatu</li>
+          <li>Pakaian</li>
+          <li>Aksesoris</li>
+        </ul>
+        <ul>
+          <li>
+            <h5>Featured</h5>
+          </li>
+          <li>New Arrivals</li>
+          <li>Imposibble is Nothing</li>
+          <li>Exclusion</li>
+          <li>Sale</li>
+          <li>Last Chance</li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-content-wrapper">
+      <div class="footer-list-container">
+        <ul>
+          <li>
+            <h5>Sport</h5>
+          </li>
+          <li>Predator Football Boots</li>
+          <li>X Football Boots</li>
+          <li>Copa Football Boots</li>
+          <li>Manchester United</li>
+          <li>Juventus</li>
+          <li>Real Madrid</li>
+          <li>Arsenal</li>
+          <li>Bayern Munchen</li>
+          <li>Boost Shoes</li>
+          <li>Ultraboost</li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-content-wrapper">
+      <div class="footer-list-container">
+        <ul>
+          <li>
+            <h5>Koleksi</h5>
+          </li>
+          <li>Stan Smith</li>
+          <li>Superstar</li>
+          <li>Ultraboost</li>
+          <li>NMD</li>
+          <li>adidas Exclusive</li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-content-wrapper">
+      <div class="footer-list-container">
+        <ul>
+          <li>
+            <h5>Legal</h5>
+          </li>
+          <li>Kebijakan Privasi</li>
+          <li>Syarat dan Ketentuan</li>
+          <li>Ketentuan Pengiriman</li>
+        </ul>
+        <ul>
+          <li>
+            <h5>Support</h5>
+          </li>
+          <li>Hubungi Kami</li>
+          <li>Panduan Ukuran</li>
+          <li>Cara Berbelanja</li>
+          <li>Promo & Voucher</li>
+          <li>Pembayaran</li>
+          <li>Pengiriman</li>
+          <li>Retur dan Pengembalian</li>
+          <li>Dana</li>
+          <li>Tentang Produk adidas</li>
+          <li>Cara Menggunakan Situs <br>Kami</li>
+          <li>Akun Anda</li>
+          <li>Cek Status Pesanan</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
