--- a/index.html
+++ b/index.html
@@ -359,5 +359,21 @@
       </div>
     </div>
   </div>
+  <div class="footer-section-container">
+    <div class="footer-section-wrapper">
+      <div class="footer-country">
+        <img class="footer-country-media" src="img/id.svg" alt="flag">
+        <span class="footer-country-text">Indonesia</span>
+      </div>
+      <div class="footer-links">
+        <ul class="footer-link-list">
+          <li><a href="#">Privacy Policy</a></li>
+          <li><span>|</span></li>
+          <li><a href="#">Terms and Conditions</a></li>
+          <li><span>&copy; 2021 adidas Indonesia</span></li>
+        </ul>
+      </div>
+    </div>
+  </div>  
 </body>
 </html>
