--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
           <span class="adidas-product-price">Rp. 2.300.000</span>
         </div>
         <button class="adidas-wishlist-button">&#x2661;</button>
+        <div class="carousel-nav">
+          <button class="carousel-button" onclick="prevSlide()">&#8250;</button>
+        </div>
       </div>
     </div>
   </div>
